--- a/intro.html
+++ b/intro.html
@@ -1,19 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Introducción</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav>
-            <a href="./index.html">Apuntes Javascript</a>
-        </nav>
-        <h1>Introducción</h1>
+      <nav>
+        <a href="./index.html">Apuntes Javascript</a>
+      </nav>
+      <h1>Introducción</h1>
     </header>
     <main>
-        
+      <section>
+        <article>
+          <h2>Características de JavaScript</h2>
+          <ul>
+            <li>Tiene un objetivo concreto: ejecutarse en un navegador</li>
+            <li>Se ejecuta en local, lo cual implica rapidez e inmediatez</li>
+            <li>Es interpretado (no compilado)</li>
+            <li>Es de respuesta inmediata</li>
+            <li>Agrega interactividad a los sitios web</li>
+            <li>Proporciona efectos visuales dinámicos</li>
+          </ul>
+        </article>
+        <article>
+          <h2>JQUERY. ¿Qué es?</h2>
+          <ul>
+            <li>
+              Una librería de código JS ya elaborado, libre, de código abierto
+              disponible para que cualquier programador la utilice en sus
+              proyectos.
+            </li>
+            <li>Simplifica los dos principales inconvenientes de JS:</li>
+            <ul>
+              <li>Dificultad a la hora de programar</li>
+              <li>Incompatibilidad entre navegadores</li>
+            </ul>
+            <li>
+              JQuery permite agregar funcionalidades avanzadas a nuestros sitios
+              web
+            </li>
+            <li>
+              JQuery se utiliza en millones de sitios web, algunos tan conocidos
+              como los basados en los CMS Drupal, Wordpress, etc
+            </li>
+          </ul>
+        </article>
+        <article>
+          <h2>Agregando Javascript a una página</h2>
+          <ul>
+            <li>¿Dónde va el código?</li>
+            <ul>
+              <li>
+                Dentro de la página. Entre etiquetas &lt;script&gt; y
+                &lt;/script&gt;
+              </li>
+              <ul>
+                <li>En el head</li>
+                <li>En cualquier otra parte</li>
+              </ul>
+            </ul>
+            <li>En archivos externos con extensión js</li>
+            <li>
+              <em>Nota:</em> si necesitamos que el script se ejecute después de
+              que se lea todo el html, debemos añadirle el atributo
+              <strong>defer</strong>
+            </li>
+          </ul>
+        </article>
+      </section>
     </main>
-</body>
+  </body>
 </html>
