Sintaxis sin terminar

--- a/sintaxis.html
+++ b/sintaxis.html
@@ -46,9 +46,14 @@
           </p>
           <p>Sintaxis (declaración):</p>
           <p class="codigo">let puntuacion;</p>
-        </article>
-        <article>
-          <h2>Reglas importantes</h2>
+          <h3>Reglas importantes de dar nombre a una variable:</h3>
+          <ul>
+            <li>Han de comenzar por letra, símbolo $ o _</li>
+            <li>Han de contener solo letras, números, $ y _</li>
+            <li>Son case sensitive (sensible a mayúsculas y minúsculas)</li>
+            <li>No deben ser palabras reservadas</li>
+            <li>Se recomienda que sean descriptivos</li>
+          </ul>
         </article>
         <article>
           <h2>Iniciar la variable</h2>
