--- a/documents/sintaxis.html
+++ b/documents/sintaxis.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="../scripts/base.js" defer></script>
+    <link rel="stylesheet" href="../styles/base.css" />
     <title>Sintaxis</title>
   </head>
   <body>
     <header></header>
     <main>
       <section>
-        <article>
-          <h2>Sentencias</h2>
+        <button type="button" class="collapsible"><h2>Sentencias</h2></button>
+        <article class="content">
           <p>Es una unidad de código que realiza una acción.</p>
           <p>
             Las sentencias son instrucciones que le indican al programa qué
