--- a/documents/index.html
+++ b/documents/index.html
@@ -13,36 +13,8 @@
       <section>
         <article><a href="./intro.html">Introducción</a></article>
         <article><a href="./sintaxis.html">Sintaxis</a></article>
+        <article><a href="./poo.html">POO</a></article>
       </section>
     </main>
-
-    <p
-      class="codepen"
-      data-height="300"
-      data-default-tab="html,result"
-      data-slug-hash="YzBVdEP"
-      data-user="freezyfrosty"
-      style="
-        height: 300px;
-        box-sizing: border-box;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border: 2px solid;
-        margin: 1em 0;
-        padding: 1em;
-      "
-    >
-      <span
-        >See the Pen
-        <a href="https://codepen.io/freezyfrosty/pen/YzBVdEP"> Untitled</a> by
-        Iria. (<a href="https://codepen.io/freezyfrosty">@freezyfrosty</a>) on
-        <a href="https://codepen.io">CodePen</a>.</span
-      >
-    </p>
-    <script
-      async
-      src="https://cpwebassets.codepen.io/assets/embed/ei.js"
-    ></script>
   </body>
 </html>
