--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../styles/menu.css" />
+    <link rel="stylesheet" href="styles/menu.css" />
     <title>Menú Principal</title>
   </head>
 
@@ -15,7 +15,7 @@
     <main>
       <section class="menu-list">
         <ul>
-          <li><a href="sintaxis.html">Sintaxis Básica</a></li>
+          <li><a href="./documents/sintaxis.html">Sintaxis Básica</a></li>
         </ul>
       </section>
     </main>
