--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <main>
       <section class="menu-list">
         <ul>
+          <li><a href="./documents/intro.html">Introducción</a></li>
           <li><a href="./documents/sintaxis.html">Sintaxis Básica</a></li>
+          <li><a href="./documents/math.html">Math</a></li>
         </ul>
       </section>
     </main>
