--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/base.css" />
     <link rel="stylesheet" href="styles/menu.css" />
     <title>Menú Principal</title>
   </head>
@@ -17,7 +18,7 @@
         <ul>
           <li><a href="./documents/intro.html">Introducción</a></li>
           <li><a href="./documents/sintaxis.html">Sintaxis Básica</a></li>
-          <li><a href="./documents/math.html">Math</a></li>
+          <li><a href="./documents/math.html">Números</a></li>
         </ul>
       </section>
     </main>
