--- a/documents/intro.html
+++ b/documents/intro.html
@@ -11,7 +11,7 @@
     <header>
       <h1>Introducción</h1>
       <nav>
-        <a href="./index.html">Apuntes Javascript</a>
+        <a href="../index.html">Apuntes Javascript</a>
       </nav>
     </header>
     <main>
