--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <li><a href="./documents/intro.html">Introducción</a></li>
           <li><a href="./documents/sintaxis.html">Sintaxis Básica</a></li>
           <li><a href="./documents/math.html">Números</a></li>
+          <li><a href="./documents/funciones.html">Tipos de funciones</a></li>
         </ul>
       </section>
     </main>
