--- a/documents/sintaxis.html
+++ b/documents/sintaxis.html
@@ -10,6 +10,9 @@
   <body>
     <header>
       <h1>Sintaxis básica</h1>
+      <nav>
+        <a href="../index.html">Apuntes Javascript</a>
+      </nav>
     </header>
     <main>
       <section>
