--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <li><a href="./documents/sintaxis.html">Sintaxis Básica</a></li>
           <li><a href="./documents/math.html">Números</a></li>
           <li><a href="./documents/funciones.html">Tipos de funciones</a></li>
+          <li><a href="./documents/metodos.html">Metodos</a></li>
         </ul>
       </section>
     </main>
